compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_pattern_label_shorthand.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Wibble { Wibble(arg: Int) }\npub fn main() {\n  let Wibble(not_a_label:) = Wibble(1)\n}\n"
---
----- SOURCE CODE

pub type Wibble { Wibble(arg: Int) }
pub fn main() {
  let Wibble(not_a_label:) = Wibble(1)
}


----- ERROR
error: Unknown label
  ┌─ /src/one/two.gleam:4:14
  │
4 │   let Wibble(not_a_label:) = Wibble(1)
  │              ^^^^^^^^^^^^ Did you mean `arg`?

It accepts these labels:

    arg
